--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ social-network-links:
   email: "beshjm@gmail.com"
   rss: false  # remove this line if you don't want to show an RSS link at the bottom
   # facebook: deanattali
-  github: daattali
+  github: beshario
   # twitter: daattali
   # patreon: DeanAttali
   # youtube: c/daattali
