--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author: Beshari Jamal
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
+  Hire Me: "hireme"
   # Resources:
     # - Beautiful Jekyll: "https://beautifuljekyll.com"
     # - Learn markdown: "https://www.markdowntutorial.com/"
